--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "todo-backend"
+name = "backend"
 version = "0.1.0"
 description = ""
 authors = ["Igor Souza <igormcsouza@gmail.com>"]
