--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,11 +4,21 @@ version = "0.1.0"
 description = ""
 authors = ["Igor Souza <igormcsouza@gmail.com>"]
 
+[tool.poetry.scripts]
+test = 'scripts.test:testing_pipeline'
+
 [tool.poetry.dependencies]
 python = "^3.8"
+Flask = "^1.1.2"
+Flask-RESTful = "^0.3.8"
+pymongo = "^3.11.2"
+flask-restful-swagger = "^0.20.2"
+pytest-flask = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pylint = "^2.6.0"
+mypy = "^0.790"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
