--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ pytest-flask = "^1.1.0"
 pytest = "^5.2"
 pylint = "^2.6.0"
 mypy = "^0.790"
+python-dotenv = "^0.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
