--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,6 +10,6 @@ jobs:
       - name: Build Backend Images
         run: docker-compose build backend
       - name: Run Backend and Database Containers
-        run: docker-compose up backend database -d
+        run: docker-compose up -d backend database
       - name: Run Test Backend Pipeline
         run: docker-compose exec backend poetry run test
