Use exec with -T parameter

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Run Backend and Database Containers
         run: docker-compose up -d backend database
       - name: Run Test Backend Pipeline
-        run: docker-compose run backend poetry run test
+        run: docker-compose exec -T backend poetry run test
