--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: Build Frontend Images
         run: docker-compose build frontend
-      - name: Run Frontend Build
-        run: docker-compose run frontend npm run build
+      - name: Run Frontend Test using Jest
+        run: docker-compose run frontend npm run test -- --watchAll=false
