--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - master
+  push:
+    branches:
+      - master
 
 jobs:
   backend:
@@ -20,3 +23,5 @@ jobs:
         run: docker-compose build frontend
       - name: Run Frontend Test using Jest
         run: docker-compose run frontend npm run deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
