--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,6 +26,6 @@ jobs:
         working-directory: frontend/
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/igormcsouza/full-stack-todo.git
-          npm run deploy
+          npm run deploy -- --user "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
