--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,6 +12,7 @@ jobs:
   backend:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.8.9
         with:
           heroku_api_key: ${HEROKU_API_KEY}
