--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,13 +15,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.8.9
         with:
-          heroku_api_key: ${HEROKU_API_KEY}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "full-stack-todo-bknd"
           heroku_email: "igormcsouza@gmail.com"
           usedocker: true
           appdir: "backend"
         env:
-          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
           HD_MONGO_URI: ${{secrets.MONGO_URI}}
   frontend:
     runs-on: ubuntu-latest
