--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ Flask = "^1.1.2"
 Flask-RESTful = "^0.3.8"
 pymongo = "^3.11.2"
 flask-restful-swagger = "^0.20.2"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
