--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ Flask-RESTful = "^0.3.8"
 pymongo = "^3.11.2"
 flask-restful-swagger = "^0.20.2"
 gunicorn = "^20.0.4"
+dnspython = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
