--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ pymongo = "^3.11.2"
 flask-restful-swagger = "^0.20.2"
 gunicorn = "^20.0.4"
 dnspython = "^2.1.0"
+Flask-Cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
