--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command: npm start
     volumes:
       - ./frontend/:/frontend/
+      - /frontend/node_modules
     ports:
       - 8080:8080
 
